Bug 1843239: Profile block user picture overlaps name
Fixes so name isn't covered by a person's profile picture in th profile
side bar block when the name is long. 

Also fixed the "Default" theme where the colour of the block
header fits the profile picture better.

behatnotneeded

--- a/htdocs/theme/default/sass/layout/_profile-block.scss
+++ b/htdocs/theme/default/sass/layout/_profile-block.scss
@@ -1,6 +1,6 @@
 .sidebar {
     .profile-block.card-header {
-        min-height: 80px;
+        min-height: 92px;
 
         .username {
             &:hover {
