--- a/htdocs/theme/raw/sass/layout/_profile-block.scss
+++ b/htdocs/theme/raw/sass/layout/_profile-block.scss
@@ -1,7 +1,7 @@
 .profile-block.card-header {
     padding:0;
     .username {
-        padding: 10px 75px 10px 15px;
+        padding: 10px 90px 10px 15px;
         display: block;
         word-break: break-word;
     }
